# cpp-ge-1

./: .clangd  .gitignore  CMakeLists.txt  main.cpp  make.sh
.cache/clangd/index/: Component.cppm.62F15FBC0C6B1376.idx  Entity.cppm.8DEECDED1BBEBF43.idx  Scene.cppm.B878B8F8F915EA9B.idx  component.cppm.29991CF40F63508A.idx  engine.cppm.CCE3D78C0D2C5D03.idx  entuty.cppm.E93322923F7303B4.idx  info.hpp.0CB26F458B17DEAD.idx  interfaces.cppm.A288003F0D6924DE.idx  main.cpp.4ECD8C6EEABBF302.idx  scene.cppm.3131AAF52A108EC3.idx  transform.cppm.C4174F3CAC7C395F.idx
engine/component/: Component.cppm
engine/entity/: Entity.cppm
engine/scene/: Scene.cppm
src/: main.cpp
src/engine/: engine.cppm
src/engine/component/: Component.cppm  component.cppm  transform.cppm
src/engine/define/: info.hpp
src/engine/entity/: entuty.cppm
src/engine/interfaces/: interfaces.cppm
src/engine/scene/: Scene.cppm  scene.cppm
